# skillbox-cpp

./: .gitignore  README.md
module 14/checkIP/: CMakeLists.txt  main.cpp
module 14/compareRealNumbers/: CMakeLists.txt  main.cpp
module 14/eMailAddressCheck/: CMakeLists.txt  main.cpp
module 14/notsAndCrosses/: main.cpp
module 15/battleship/: CMakeLists.txt  main.cpp
module 15/buildings/: CMakeLists.txt  main.cpp
module 15/isolation/: CMakeLists.txt  main.cpp
module 15/radio/: main.cpp
module 16/task16.1/: CMakeLists.txt  main.cpp
module 16/task16.2/: CMakeLists.txt  main.cpp
module 16/task16.3/: CMakeLists.txt  main.cpp
module 17/banquet/: CMakeLists.txt  main.cpp
module 17/battleship3.0/: CMakeLists.txt  main.cpp
module 17/bubbleWrap/: CMakeLists.txt  main.cpp
module 17/diagonalMatrix/: CMakeLists.txt  main.cpp
module 17/matrixCompare/: CMakeLists.txt  main.cpp
module 17/matrixMultVector/: CMakeLists.txt  main.cpp
module 17/newMinecraft/: CMakeLists.txt  main.cpp
module 17/notsAndCrosses2.0/: CMakeLists.txt  main.cpp
module 17/snake/: main.cpp
module 18/18.1/: CMakeLists.txt  main.cpp
module 18/18.2/: main.cpp
module 18/18.3/: CMakeLists.txt  main.cpp
module 18/18.4/: CMakeLists.txt  main.cpp
module 19/calculator/: main.cpp
module 19/mechanicalPiano/: CMakeLists.txt  main.cpp
module 19/realNumberCompiler/: CMakeLists.txt  main.cpp
module 19/smartHome/: CMakeLists.txt  main.cpp
module 19/speedometer/: main.cpp
module 28/pc/src/: CMakeLists.txt  cpu.cpp  disk.cpp  gpu.cpp  kbd.cpp  main.cpp  ram.cpp
(+191 files in other folders)
